--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,6 +52,11 @@ maps-compose = { group = "com.google.maps.android", name = "maps-compose", versi
 maps-sdk = { group = "com.google.android.gms", name = "play-services-maps", version = "18.2.0" }
 places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 
+navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version = "2.7.7" }
+navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version = "2.7.7" }
+navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.7.7" }
+
+
 
 # Room
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
